# fastapi_template

./: .env.docker.dev.example  .env.docker.prod.example  .env.example  .gitignore  .venv.example  CASBIN_QUICK_REFERENCE.md  CASBIN_RBAC_README.md  CASBIN_VERIFICATION.md  CELERY_IMPLEMENTATION.md  CELERY_QUICKSTART.md  CELERY_SETUP.md  Makefile  README.md  REDIS_CACHE_README.md  REDIS_CACHE_SUMMARY.md  REDIS_CACHE_USAGE.md  TEMPLATE_RELEASE_CHECKLIST.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  start_servers.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1d2f3edc5007_initial_migration.py  5b5c57e0cb88_added_organization_related_tables.py  8c2c0a5b9f3d_add_notifications_and_sse_support.py
backend/: .dockerignore  .env.example  Dockerfile  Pipfile  alembic.ini  db.sqlite3  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/docker/: healthcheck_backend.py  healthcheck_backend.sh  healthcheck_worker.py  healthcheck_worker.sh
backend/src/: main.py
backend/tests/: conftest.py  factories.py  test_factories.py
docs/: README.md
docs/analysis/: data-dictionary.md
docs/detailed-design/: api-design.md  erd-database-schema.md
docs/edge-cases/: notifications.md  security-and-compliance.md
docs/high-level-design/: architecture-diagram.md  c4-diagrams.md
docs/implementation/: backend-config-reference.md  casbin-rbac.md  communications-provider-matrix.md  working-principles.md
frontend/: .dockerignore  .env.local.example  .gitignore  .prettierignore  Dockerfile  Makefile  docker-compose.yml  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  sonar-project.properties  tsconfig.json  vite.config.ts  vitest.config.ts
infra/: Dockerfile  docker-compose.yml  entrypoint.sh
mobile/: .env  .env.example  pubspec.yaml
scripts/: copy_env_templates.sh  validate_documentation.py
src/: main.py
tests/: README.md  conftest.py  factories.py  test_auth_endpoints.py  test_email_tasks.py  test_factories.py  test_iam_schemas.py
(+768 files in other folders)
