[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "casbin>=1.43.0",
    "fastapi[standard]>=0.136.3",
    "hashids>=1.3.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
]
