[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.43.27",
    "casbin>=1.43.0",
    "casbin-sqlalchemy-adapter>=1.4.0",
    "celery>=5.6.3",
    "fastapi-mail>=1.6.4",
    "fastapi[standard]>=0.136.3",
    "hashids>=1.3.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pyotp>=2.9.0",
    "pyseto>=1.9.3",
    "python-dotenv>=1.2.2",
    "qrcode>=8.2",
    "redis>=8.0.0",
    "slowapi>=0.1.9",
    "slugify>=0.0.1",
]
