[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "amqp>=5.3.1",
    "argon2-cffi>=25.1.0",
    "boto3>=1.43.27",
    "casbin>=1.43.0",
    "casbin-sqlalchemy-adapter>=1.4.0",
    "celery>=5.6.3",
    "fastapi-mail>=1.6.4",
    "fastapi[standard]>=0.136.3",
    "google-auth>=2.55.0",
    "greenlet>=3.5.1",
    "hashids>=1.3.1",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "passlib[argon2,bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pyotp>=2.9.0",
    "pyseto>=1.9.3",
    "python-dotenv>=1.2.2",
    "python-slugify>=8.0.4",
    "qrcode>=8.2",
    "redis>=8.0.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
